--- a/package.json
+++ b/package.json
@@ -4,15 +4,30 @@
   "main": "src/main.ts",
   "license": "MIT",
   "dependencies": {
-    "@types/node": "^20.3.0",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.3.1",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1"
   },
   "scripts": {
     "build": "tsc",
     "start": "node ./bin/main.js",
-    "dev": "ts-node ./src/main.ts"
+    "dev": "ts-node ./src/main.ts",
+    "test": "jest --verbose"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    }
   }
 }
